--- a/src/content/bitstream/2022.md
+++ b/src/content/bitstream/2022.md
@@ -13,6 +13,6 @@ Here's the much awaited newsletter for bitStream edition 2021 - 22. We hope you 
 
 https://forms.gle/ageo6qHCQdeRA3ty7 or write us directly at editor@cse.iitb.ac.in
 
-Please download the newsletter [here](https://www.cse.iitb.ac.in/csea/bitstream_edition2021-22.pdf)
+Please download the newsletter [here](/docs/bitstream-digital-22.pdf)
 Cheers!
 BitStream Team 2021 - 22
