--- a/src/content/bitstream/2021.md
+++ b/src/content/bitstream/2021.md
@@ -13,7 +13,7 @@ Hope you and your loved ones are healthy.
 
 After an impressive response to the first edition, we're glad to release the second edition of our department's student newsletter, bitStream. We've included articles on diverse topics in this edition, and we hope you enjoy reading them. Write to editor@cse.iitb.ac.in for any suggestions or ideas on this edition.
 
-Please, Download the newsletter [here](https://www.cse.iitb.ac.in/csea/bitstream_spring.pdf).
+Please, Download the newsletter [here](/docs/bitstream-digital-21.pdf).
 
 Cheers
 BitStream Team 2021-22
